# phone-coder

./: CLAUDE.md  README.md  plan.md  start.sh  stt-enable.md  vnc-desktop-integration.md
server/: .env.example  CLAUDE_REVIEW_LOG_DOC_DIAGRAM_VERSIONING.md  agent_router.py  architecture.md  architecture_plan.md  bot.py  cockpit.html  diagram_focus.py  diagramming_plan.md  doc_state.py  doc_storage.py  doc_writer.py  dual_stt.py  editor.html  manual_tests_phase1.md  pyproject.toml
server/poc/: PHASE0_STATUS.md  atomic_write.py  poc1_iframe_test.html  poc3_mermaid_test.html  poc5_overlay_test.html  poc6_model_stack.py
server/spikes/: test_three_layers.py  vision_spike.py
server/tests/: test_phase1_docwriter.py  test_phase1_state.py  test_phase1_storage.py  test_phase2_diagrams.py  test_poc4_atomic_write.py
